# ScienceAccess

./: .all-contributorsrc  .streamlit  .travis.yml  =0.3.3  Dockerfile  Procfile  README.md  _author_specificR Gerkin.p  _author_specificSayali Phatak.p  app.py  app.py.orig  app_ddg.py  app_dev.py  app_sentiment.py  apple_setup.sh  crawl.py  discoverbloat.py  entry_point.py  file_download_upload.py  get_bmark_corpus.py  grobid_client.py  hypothesis_testing.ipynb  index.html  install.sh  license.md  main.py  nltk.txt  online_app_backend.py  orcid_scrape.py  original_distri.py  packages.txt  plotly_wordcloud.py  requirements.txt  science.ipynb  scrape.py  search_author_vis_data.ipynb  setup.cfg  setup.py  setup.py.orig  setup.sh  (+7 more)
.binder/: postBuild  streamlit_call.py
.circleci/: config.yml
.devcontainer/: devcontainer.json
Documentation/: BioRxiv.md  JOSS_04122021  discussion.md  paper.bib  paper.md  paper_2021.md
app_pages/: entry_app.py
awesome_stl/: Dockerfile
data/: _author_specificDouglas Adams.p  list_of_authors.md  traingDats.p.REMOVED.git-id  trainingDats.p.REMOVED.git-id
docker_layers/: Dockerfile
install/: align_data_sources.py  gecko_install.sh  user_install.sh
old/: for_joss (1).py
science_access/: __init__.py  analysis.py  app_backup.py  authors.py  bokeh_word_cloud.py  crawl.py  download_s2orc_and_filter.py  enter_author_name.py  get_bmark_corpus.py  online_app_backend.py  online_app_backend.py.orig  plotly_word_cloud.py  readabilityFunctions.py  scholar.py  scopus.py  scrape.py  t_analysis.py  t_analysis.py.orig  utils.py  (+1 more)
(+4 files in other folders)
