[metadata]
name = neuronunit
version = 0.19
description = A SciUnit library for data-driven testing of single-neuron physiology models.
long_description_content_type = text/markdown
url = http://github.com/russelljjarvis/neuronunit

author = Russell Jarvis
author_email = russelljarvis@protonmail.com
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
zip_safe = False
packages = find:
python_requires = >=3.5

install_requires =
    regex
    PyPDF2
    pycld2
    nltk
    selenium
    delver
    pdfminer
    pyvirtualdisplay
    textstat
    fsspec>=0.3.3
    textblob
    twython
    streamlit
    wordcloud
    seaborn
    bs4
    natsort
    dask
    plotly
    tabulate
    chart_studio
    tqdm
    crossref-commons
    pipenv
    JPype1
